[metadata]
author = Roman Dobosz
author_email = gryf73@gmail.com
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Developers
  License :: OSI Approved :: BSD License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Topic :: Utilities
description = Midnight Commander extfslib helper library for writing extfs archive plugins.
license = BSD 3-Clause License
license_files = LICENSE
long_description = file: README.rst
name = extfslib
url = https://github.com/gryf/mc_extfslib
version = 1.4

[options]
py_modules = extfslib
